--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".past"
+            android:exported="false" />
+        <activity
             android:name=".ui.login.login"
             android:exported="false" />
         <activity
